--- a/public/app.html
+++ b/public/app.html
@@ -102,11 +102,11 @@
     <div id="userFormTemp" class="form">
       <input type="hidden" id="userObject" />
       <div id="dataBox">
-        <input type="text" id="userName" placeholder="NAME" />
-        <input type="email" id="userEmail" placeholder="EMAIL" />
+        <input type="text" id="userName" placeholder="name*" />
+        <input type="email" id="userEmail" placeholder="email*" />
         <input type="email" id="userWWW" placeholder="https://website.me" />
         <select id="country" name="country">
-          <option>select country</option>
+          <option>select country *</option>
           <option value="AF">Afghanistan</option>
           <option value="AX">Aland Islands</option>
           <option value="AL">Albania</option>
@@ -360,11 +360,17 @@
           <option value="ZM">Zambia</option>
           <option value="ZW">Zimbabwe</option>
         </select>
+        <textarea id="status" placeholder="status message* ..."></textarea>
+        <p>* Required Fields</p>
       </div>
       <div id="socioBox">
-        <input type="email" id="userTwitter" placeholder="@twt_handle" />
-        <input type="email" id="userTel" placeholder="@tme_handle" />
-        <input type="email" id="userGithub" placeholder="@github_handle" />
+        <input type="email" id="userTwitter" placeholder="@twt_handle**" />
+        <input type="email" id="userTel" placeholder="@tme_handle**" />
+        <input type="email" id="userGithub" placeholder="@github_handle**" />
+        <input type="email" id="userInsta" placeholder="@insta_handle**" />
+        <input type="email" id="userLinked" placeholder="@linkedin_handle**" />
+        <input type="email" id="userMedium" placeholder="@medium_handle**" />
+        <p>** At least 1 Social Handle is required</p>
       </div>
       <div id="avtBox">
         <div id="avatarPreview">
@@ -376,29 +382,35 @@
           <input type="button" id="btnSocio" value="social" />
           <input type="button" id="btnPic" value="photo" />
         </div>
-        <div id="upBox">
-          <input type="file" id="fileUpload" />
-          <input type="text" id="userName" placeholder="IPFS HASH #" disabled />
+      </div>
+
+      <div id="upBox">
+        <input type="file" id="fileUpload" hidden />
+        <input type="button" id="selectBtn" value="select" />
+        <input type="button" id="uploadBtn" value="upload image" />
+        <input type="text" id="userName" placeholder="IPFS HASH #" disabled />
+      </div>
+      <div id="nftBox">
+        <div id="manNftBox">
+          <input type="text" id="contract" placeholder="contract" />
+          <input type="text" id="id" placeholder="id" />
+          <div id="check"><input type="checkbox" id="dias" checked /> DIAS Compliant</div>
+          <div id="check"><input type="checkbox" id="solbond" checked /> s0xbond Compliant</div>
+          <input type="button" name="avtType" id="avtType" value="upload image" />
         </div>
-        <div id="nftBox">
-          <input type="button" name="avtType" id="avtType" value="scan" />
-          <div id="scanBox"></div>
-          <div id="manNftBox">
-            <input type="text" id="contract" placeholder="contract" />
-            <input type="text" id="id" placeholder="id" />
-            <input type="checkbox" id="dias" checked /> DIAS Compliant <input type="checkbox" id="solbond" checked /> s0xbond Compliant
-          </div>
-        </div>
-        <div id="pfpBox">
-          <input type="button" name="avtType" id="avtType" value="insta" />
-          <input type="button" name="avtType" id="avtType" value="twitter" />
-          <input type="button" name="avtType" id="avtType" value="telegram" />
-          <input type="button" name="avtType" id="avtType" value="pinterest" />
-        </div>
-        <div id="picBox">
-          <input type="button" name="avtType" id="avtType" value="webcam" />
-          <input type="button" name="avtType" id="avtType" value="clipboard" />
-        </div>
+      </div>
+      <div id="pfpBox">
+        <input type="button" id="twtPfp" value="get twitter pfp" />
+        <input type="button" id="telPfp" value="get telegram pfp" />
+        <input type="button" id="gitPfp" value="get github pfp" />
+        <input type="button" id="insPfp" value="get insta pfp" />
+        <input type="button" id="lnkPfp" value="get linked pfp" />
+        <input type="button" id="mdmPfp" value="get medium pfp" />
+        <p id="pfpInf">Click to add your social PFP</p>
+      </div>
+      <div id="picBox">
+        <input type="button" id="webcam" value="webcam" />
+        <input type="button" id="clipboard" value="clipboard" />
       </div>
     </div>
   </body>
