--- a/public/app.html
+++ b/public/app.html
@@ -406,7 +406,7 @@
         <input type="button" id="insPfp" value="get insta pfp" />
         <input type="button" id="lnkPfp" value="get linked pfp" />
         <input type="button" id="mdmPfp" value="get medium pfp" />
-        <p id="pfpInf">Click to add your social PFP</p>
+        <p id="pfpInf">Click to add your social PFP !</p>
       </div>
       <div id="picBox">
         <input type="button" id="webcam" value="webcam" />
