--- a/public/app.html
+++ b/public/app.html
@@ -49,6 +49,12 @@
         <div id="mabout" class="mlink">ABOUT</div>
         <div id="mservice" class="mlink">SERVICE</div>
         <div id="mteam" class="mlink">TEAM</div>
+        <div id="sublinks">
+          <div id="mimprint" class="mslink">Imprint</div>
+          <div id="mcontact" class="mslink">Contact</div>
+          <div id="mterms" class="mslink">Terms</div>
+          <div id="madmin" class="mslink">Admin</div>
+        </div>
       </div>
     </div>
     <div id="foot" class="navlayout">
