--- a/public/app.html
+++ b/public/app.html
@@ -50,10 +50,10 @@
         <div id="mservice" class="mlink">SERVICE</div>
         <div id="mteam" class="mlink">TEAM</div>
         <div id="sublinks">
-          <div id="mimprint" class="mslink">Imprint</div>
           <div id="mcontact" class="mslink">Contact</div>
           <div id="mterms" class="mslink">Terms</div>
-          <div id="madmin" class="mslink">Admin</div>
+          <div id="mimprint" class="mslink">Imprint</div>
+          <div id="madmin" class="mslink">&nbsp;</div>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
         <div id="imprint" class="link">Imprint</div>
         <div id="contact" class="link">Contact</div>
         <div id="terms" class="link">Terms</div>
-        <div id="terms" class="link">Admin</div>
+        <div id="admin" class="link">&nbsp;</div>
       </div>
     </div>
     <div id="landingTemp" class="stage">
