--- a/public/app.html
+++ b/public/app.html
@@ -11,7 +11,7 @@
     <div id="nav">
       <div class="navlayout">
         <div id="start" class="bar">
-          <div id="logo" class="link">TITLE</div>
+          <div id="logo" class="link"><img id="logIMG" src="./images/theDojoSignet.png" /></div>
         </div>
         <div id="links" class="bar">
           <div id="about" class="link">ABOUT</div>
@@ -58,7 +58,9 @@
       </div>
     </div>
     <div id="foot" class="navlayout">
-      <div id="start" class="bar"><div id="logo" class="link">&copy;TITLE</div></div>
+      <div id="start" class="bar">
+        <div id="logo" class="link"><img id="logIMG" src="./images/theDojoSignet.png" /></div>
+      </div>
       <div id="copy" class="bar"></div>
       <div id="defi" class="bar">
         <div id="imprint" class="link">Imprint</div>
