--- a/public/app.html
+++ b/public/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/x-icon" href="./images/fav.png" />
-    <title>_TITLE_</title>
+    <title>DOJOv2 | YOUR_TITLE_HERE</title>
   </head>
   <body>
     <div id="nav">
