--- a/public/app.html
+++ b/public/app.html
@@ -71,7 +71,18 @@
     </div>
     <div id="adminTemp" class="stage">
       <div id="headline" class="title">Admin</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="Profile" class="box">
+        <div id="ColorBox" class="box">
+          <input type="button" value="init" />
+          <input type="button" value="eco" />
+          <input type="button" value="irie" />
+          <input type="button" value="modern" />
+        </div>
+      </div>
+      <div id="Promoter" class="box"></div>
+      <div id="Advertiser" class="box"></div>
+      <div id="Admin" class="box"></div>
+      <div id="Moderator" class="box"></div>
     </div>
     <div id="landingTemp" class="stage">
       <div id="headline" class="title">Headline</div>
