--- a/public/app.html
+++ b/public/app.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./images/fav.png" />
     <title>DOJOv2 | YOUR_TITLE_HERE</title>
   </head>
-  <body id="irie">
+  <body id="initgo">
     <div id="nav">
       <div class="navlayout">
         <div id="start" class="bar">
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div id="stage" class="stage">
-      <div id="headline" class="title">HEADLINE</div>
+      <div id="headline" class="title">Headline</div>
       <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
       <div id="media" class="media"><img src="./images/theDojoLogo.png" alt="media" /></div>
     </div>
@@ -73,15 +73,15 @@
       <div id="headline" class="title">Admin</div>
       <div id="module" class="txt">
         <div id="ColorBox" class="box">
-          <input type="button" value="init" />
-          <input type="button" value="eco" />
-          <input type="button" value="irie" />
-          <input type="button" value="modern" />
+          <input id="init" type="button" value="init" />
+          <input id="eco" type="button" value="eco" />
+          <input id="irie" type="button" value="irie" />
+          <input id="modern" type="button" value="modern" />
         </div>
       </div>
     </div>
     <div id="landingTemp" class="stage">
-      <div id="headline" class="title">HEADLINE</div>
+      <div id="headline" class="title">Headline</div>
       <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
       <div id="media" class="media"><img id="image" src="./images/theDojoLogo.png" alt="media" /></div>
     </div>
