--- a/public/app.html
+++ b/public/app.html
@@ -32,8 +32,21 @@
       </div>
     </div>
     <div id="stage" class="stage">
-      <div id="headline" class="title">Headline</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="headline" class="title">Welcome to the DOJO !</div>
+      <div id="module" class="txt">
+        <h2>
+          The #1 web3 boilerplate environment that requires :
+          <ul>
+            <li>NodeJS</li>
+            <li>Truffle</li>
+            <li>Webpack</li>
+            <li>JavaScript</li>
+            <li>Sass</li>
+            <li>HTML5</li>
+          </ul>
+          Check out & feel free to fork the repo here<br /><br /><a href="https://github.com/iii6code/III6Dojo">github.com/iii6/iii6Dojo</a>
+        </h2>
+      </div>
       <div id="media" class="media"><img src="./images/theDojoLogo.png" alt="media" /></div>
     </div>
     <div id="mobnav" class="stage">
@@ -81,8 +94,22 @@
       </div>
     </div>
     <div id="landingTemp" class="stage">
-      <div id="headline" class="title">Headline</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="headline" class="title">Welcome to the DOJO !</div>
+      <div id="module" class="txt">
+        <h2>
+          The #1 web3 boilerplate environment that requires :
+          <ul>
+            <li>NodeJS</li>
+            <li>Truffle</li>
+            <li>Webpack</li>
+            <li>JavaScript</li>
+            <li>Sass</li>
+            <li>HTML5</li>
+          </ul>
+          Check out & feel free to fork the repo here<br /><br />
+          <a href="https://github.com/iii6code/III6Dojo">github.com/iii6/iii6Dojo</a>
+        </h2>
+      </div>
       <div id="media" class="media"><img id="image" src="./images/theDojoLogo.png" alt="media" /></div>
     </div>
     <div id="walletTemp" class="stage">
