--- a/public/app.html
+++ b/public/app.html
@@ -19,10 +19,10 @@
           <div id="team" class="link">TEAM</div>
         </div>
         <div id="defi" class="bar">
-          <div id="wallet" class="link">$</div>
-          <div id="connect" class="link">LOG</div>
-          <div id="net" class="link">NET</div>
           <div id="app" class="link">APP</div>
+          <div id="connect" class="link">LOG</div>
+          <div id="wallet" class="link">$</div>
+          <div id="net" class="link">NET</div>
         </div>
         <div id="mobbtn" class="mbtn">
           <div class="line"></div>
@@ -71,9 +71,7 @@
       </div>
     </div>
     <div id="foot" class="navlayout">
-      <div id="start" class="bar">
-        <div id="logo" class="link"><img id="logIMG" src="./images/theDojoSignet.png" /></div>
-      </div>
+      <div id="copytag">&copy; DOJO.guru 2022-2025</div>
       <div id="copy" class="bar"></div>
       <div id="defi" class="bar">
         <div id="imprint" class="link">Imprint</div>
@@ -126,27 +124,92 @@
     </div>
     <div id="aboutTemp" class="stage">
       <div id="headline" class="title">About</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="module" class="txt">
+        <h2>DOJOv2 is by Devs for Devs !</h2>
+        <p>We have put lots of effort into our Project and didnt hesitate to make it as complete and flexible as possible! This Tool Supports the DIAS dynamic NFT Standard and uses no react or upscaled frameworks that cost unneccessary serverspace and limit your creativity. This Framework is Vanilla JS based, builds go through Webpack, web3 connection is connected by truffle, vrf random numbers & oracle sources by chainlink, decentral data storage on IPFS and the concept is limited only by your creativity and skill level.</p>
+        <h2>
+          Please give us your Feedback and feel free to donate to : <br /><br />
+          0x79E205680908c03047e3f3A4E63FD192Ff4Cf409
+        </h2>
+      </div>
     </div>
     <div id="serviceTemp" class="stage">
       <div id="headline" class="title">Service</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="serviceModule" class="list">
+        <div id="edu" class="sbox">
+          <h2>Edutainment</h2>
+          <div class="bar">
+            <b>Dependencies</b>
+            <b>Installation</b>
+            <b>Initialisation</b>
+            <b>Architecture</b>
+            <b>Subsections</b>
+            <b>Tokenomics</b>
+            <b>Contract Interaction</b>
+            <b>web3 ETHOS</b>
+          </div>
+        </div>
+        <div id="inform" class="ibox">
+          <h2>Get Informed</h2>
+          <div id="news" class="bar"></div>
+        </div>
+        <div id="b2b" class="bbox">
+          <h2>Get Involved</h2>
+          <div class="bar">
+            <b>Build with DOJO</b>
+            <b>Support DOJO</b>
+            <b>Connect DOJO</b>
+            <b>Improve DOJO</b>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="teamTemp" class="stage">
       <div id="headline" class="title">Team</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="module" class="stage">
+        <h2 id="team">DOJO.guru</h2>
+        <div id="stereo">
+          <img src="./images/stereo.png" id="teamPic" />
+        </div>
+        <div id="xnode">
+          <img src="./images/xnode.png" id="teamPic" />
+        </div>
+        <!-- 
+        <div id="sirheeb">
+          <img src="./images/sirheeb.png" id="teamPic" />
+        </div>
+        -->
+      </div>
     </div>
     <div id="contactTemp" class="stage">
       <div id="headline" class="title">Contact</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="module" class="txt">
+        <h1>take your gloves off and send it to ... <br /><br /><a href="bareknuckle@dojo.guru">bareknuckle@dojo.guru</a></h1>
+      </div>
     </div>
     <div id="termsTemp" class="stage">
       <div id="headline" class="title">Terms & Conditions</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="module" class="txt">
+        <ul>
+          <li>All Data is stored public on the blockchain ! That means everything you add to your profile will be technically visible for everyone and for ever.</li>
+          <li>Our Ethos is Free Speech within legal bounds. That means you are not allowed post no illegal content. And you are requested to flag illegal content. Violating either of these rules has consequences.</li>
+          <li>Content you created and published is in your custody. That means you own the content and the engagement of your audience.</li>
+          <li>Violations are screened by the community and solved by the community. Everyone is responsible for allowing harmful content. Publishing harmful content can lead to a red flag permanent ban. Flagging content harmful that is actually not can lead to a 1 month black flag ban</li>
+          <li>All Data is stored public on the blockchain ! That means everything you add to your profile will be technically visible for everyone and for ever.</li>
+          <li>Our Ethos is Free Speech within legal bounds. That means you are not allowed post no illegal content. And you are requested to flag illegal content. Violating either of these rules has consequences.</li>
+          <li>Content you created and published is in your custody. That means you own the content and the engagement of your audience.</li>
+          <li>Violations are screened by the community and solved by the community. Everyone is responsible for allowing harmful content. Publishing harmful content can lead to a red flag permanent ban. Flagging content harmful that is actually not can lead to a 1 month black flag ban</li>
+        </ul>
+      </div>
     </div>
     <div id="imprintTemp" class="stage">
       <div id="headline" class="title">Imprint</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="module" class="txt">
+        <h1>
+          DOJO.guru<br /><br />
+          a decentralised product <br />made by <br /><a href="https://codebender.xyz">codebender.xyz</a> & <a href="https://iii6.xyz">iii6.xyz</a> <br /><br /><a href="bareknuckle@dojo.guru">bareknuckle@dojo.guru</a> <br /><a href="https://dojo.guru">https://dojo.guru</a>
+        </h1>
+      </div>
     </div>
     <div id="modalTemp" class="stage">
       <div id="mBG" class="modalBG">
@@ -161,11 +224,11 @@
       <input type="hidden" id="userObject" />
       <div id="dataBox">
         <p>Connection Data</p>
-        <input type="text" id="userName" placeholder="name*" required />
-        <input type="email" id="userEmail" placeholder="email*" required />
-        <input type="email" id="userWWW" placeholder="https://website.me" />
-        <select id="country" name="country" required>
-          <option>select country *</option>
+        <input type="text" id="userName" placeholder="name*" min="4" max="21" pattern="[A-Za-z]{4,21}" required />
+        <input type="email" id="userEmail" placeholder="email*" min="4" max="44" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required />
+        <input type="text" id="userWWW" placeholder="https://website.me" min="4" max="44" pattern="https?://.+[A-Za-z]{4,21}" />
+        <select id="userCountry" name="country" required>
+          <option value="default">select country *</option>
           <option value="AF">Afghanistan</option>
           <option value="AX">Aland Islands</option>
           <option value="AL">Albania</option>
@@ -419,17 +482,17 @@
           <option value="ZM">Zambia</option>
           <option value="ZW">Zimbabwe</option>
         </select>
-        <textarea id="status" placeholder="status message* ..." required></textarea>
+        <textarea id="userStatus" placeholder="status message* ..." min="4" max="256" pattern="[A-Za-z]{4,256}" required></textarea>
         <p class="tiny">* Required Fields</p>
       </div>
       <div id="socioBox">
         <p>Social Data</p>
-        <input type="email" class="half" id="userTwitter" placeholder="@twt_handle**" />
-        <input type="email" class="half" id="userTel" placeholder="@tme_handle**" />
-        <input type="email" class="half" id="userGithub" placeholder="@github_handle**" />
-        <input type="email" class="half" id="userInsta" placeholder="@insta_handle**" />
-        <input type="email" class="half" id="userLinked" placeholder="@linkedin_handle**" />
-        <input type="email" class="half" id="userMedium" placeholder="@medium_handle**" />
+        <input type="text" class="half" id="userTwitter" placeholder="@twt_handle**" pattern="@[a-z0-9.-]" />
+        <input type="text" class="half" id="userTel" placeholder="@tme_handle**" pattern="@[a-z0-9.-]" />
+        <input type="text" class="half" id="userGithub" placeholder="@github_handle**" pattern="@[a-z0-9.-]" />
+        <input type="text" class="half" id="userInsta" placeholder="@insta_handle**" pattern="@[a-z0-9.-]" />
+        <input type="text" class="half" id="userLinked" placeholder="@linkedin_handle**" pattern="@[a-z0-9.-]" />
+        <input type="text" class="half" id="userMedium" placeholder="@medium_handle**" pattern="@[a-z0-9.-]" />
         <p class="tiny">** At least 1 Social Handle is required</p>
       </div>
       <div id="avtBox">
